--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: Thinh Source
+title: Keep Source
 
 # Your name to show in the footer
-author: Thinh Person
+author: Peter
 
 # --- List of links in the navigation bar --- #
 
