--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Keep Source
+title: keep calm and go on
 
 # Your name to show in the footer
 author: Peter
