--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,14 @@ author: Peter
 # --- List of links in the navigation bar --- #
 
 navbar-links:
+  Java: "#"
+  Structure And Algorithm : "#"
+  Javascript: "#"
+  DevOps:
+    - Linux: "#"
+    - WebServer: "#"
+    - CICD: "#"
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
 
 # --- Logo --- #
 
