--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ navbar-links:
   Java: "#"
   Structure Algorithm : "#"
   Javascript: "#"
-  DevOps Map:
+  DevOps RoadMap:
     - OS: "#"
     - Terminal: '#'
     - Net-Sec: '#'
