--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
     - CICD: "#"
     - monitor: '#'
     - Cloud Provides: '#'
-  About Me: "aboutme"
+  About Me: "page/aboutme"
 
 # --- Logo --- #
 
