--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author: Peter
 navbar-links:
   Java: "page/java"
   Structure Algorithm : "page/structureandalgorithm"
-  Javascript: "page/js"
+  JS: "page/js"
   DevOps RoadMap:
     - OS: "page/devops"
     - Terminal: 'page/devops'
@@ -192,9 +192,9 @@ footer-hover-col: "#0085A1"
 #    secret   : # Encrypt your password by going to https://<your-own-api>/v3/encrypt/<your-site-secret>
 
 # To use giscus comments:
-# (0) Uncomment the following giscus section, (1) Enable Discussions in your GitHub repository, 
+# (0) Uncomment the following giscus section, (1) Enable Discussions in your GitHub repository,
 # (2) Install the giscus app in your repository (details at https://giscus.app),
-# (3) Fill in *all* the parameters below 
+# (3) Fill in *all* the parameters below
 # See more details about giscus and each of the following parameters at https://giscus.app
 #giscus:
 #  hostname: giscus.app # Replace with your giscus instance's hostname if self-hosting
